--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+db.env
+*.env
 
 # Spyder project settings
 .spyderproject
@@ -105,3 +107,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+.vscode
